--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -11,7 +11,7 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
+    This friendly message is coming from: :D
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/Users/pc/Desktop/letzswap_project/letzswap/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/pc/Desktop/letzswap_project/letzswap/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
