fix header footer and nav

--- a/templates/Main/footer.html.twig
+++ b/templates/Main/footer.html.twig
@@ -1,7 +1,5 @@
-{% extends 'base.html.twig'%}
-
-<li class="nav-item {% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %}">
-    <a class="nav-link active " href="{{ path('terms_of_service') }}">
+<li class="nav-item {#% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %#}">
+    <a class="nav-link" href="{#{ path('terms_of_service') }#}">
         {{ 'NAV.TERMS'|trans }}
     </a>
 </li>
