logo change and footer structure add

--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -3,5 +3,26 @@
 {% block title %}Welcome to LëtzSwap!{% endblock %}
 
 {% block body %}
-
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ornare, leo consequat torquent fusce pharetra libero
+        malesuada ad etiam, luctus tempus lacinia congue commodo sagittis semper. Iaculis vitae dictum commodo
+        vestibulum libero duis euismod imperdiet a eros, elementum ultricies convallis enim ullamcorper vehicula
+        faucibus sed. Habitasse diam facilisis justo condimentum malesuada lobortis, egestas habitant eros auctor semper
+        magnis, interdum pellentesque litora ligula fermentum.</p> <p>Egestas penatibus nullam metus natoque ridiculus
+    sapien dui sodales integer mus, platea libero purus fames duis gravida fusce dapibus conubia, quis accumsan
+    porttitor magnis suscipit ullamcorper nisi senectus turpis. Turpis aenean accumsan vitae dui vestibulum congue quis
+    sed sollicitudin neque purus, in laoreet praesent eleifend fusce elementum nibh dictumst sodales. Justo malesuada a
+    commodo tortor nunc vestibulum pretium nulla volutpat dapibus mi blandit dictumst auctor, fringilla massa ridiculus
+    eget integer sociosqu enim tempor litora tincidunt tellus aenean dui. Enim cum varius tristique inceptos venenatis,
+    class consequat orci cursus laoreet, accumsan morbi interdum mollis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ornare, leo consequat torquent fusce pharetra libero
+        malesuada ad etiam, luctus tempus lacinia congue commodo sagittis semper. Iaculis vitae dictum commodo
+        vestibulum libero duis euismod imperdiet a eros, elementum ultricies convallis enim ullamcorper vehicula
+        faucibus sed. Habitasse diam facilisis justo condimentum malesuada lobortis, egestas habitant eros auctor semper
+        magnis, interdum pellentesque litora ligula fermentum.</p> <p>Egestas penatibus nullam metus natoque ridiculus
+    sapien dui sodales integer mus, platea libero purus fames duis gravida fusce dapibus conubia, quis accumsan
+    porttitor magnis suscipit ullamcorper nisi senectus turpis. Turpis aenean accumsan vitae dui vestibulum congue quis
+    sed sollicitudin neque purus, in laoreet praesent eleifend fusce elementum nibh dictumst sodales. Justo malesuada a
+    commodo tortor nunc vestibulum pretium nulla volutpat dapibus mi blandit dictumst auctor, fringilla massa ridiculus
+    eget integer sociosqu enim tempor litora tincidunt tellus aenean dui. Enim cum varius tristique inceptos venenatis,
+    class consequat orci cursus laoreet, accumsan morbi interdum mollis.</p>
 {% endblock %}
