--- a/templates/Main/footer.html.twig
+++ b/templates/Main/footer.html.twig
@@ -1,5 +1,15 @@
-<li class="nav-item {#% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %#}">
-    <a class="nav-link" href="{#{ path('terms_of_service') }#}">
-        {{ 'NAV.TERMS'|trans }}
-    </a>
-</li>
+<footer class="page-footer bg-light">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center">© 2019 Copyright - LëtzSwap!</div>
+    <!-- Copyright -->
+
+    <ul>
+        <li class="nav-item {#% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %#}">
+            <a class="nav-link" href="{#{ path('terms_of_service') }#}">
+                {{ 'NAV.TERMS'|trans }}
+            </a>
+        </li>
+    </ul>
+
+</footer>
