--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -20,8 +20,8 @@
                     {{ 'NAV.LOGIN'|trans }}
                 </a>
             </li>
-            <li class="nav-item {% if app.request.attributes.get('_route') == 'app_register' %} active {% endif %}">
-                <a class="nav-link" href="{# { path('app_register') }#}">
+            <li class="nav-item {% if app.request.attributes.get('_route') == 'register' %} active {% endif %}">
+                <a class="nav-link" href="{{ path('register')}}">
                     {{ 'NAV.REGISTER'|trans }}
                 </a>
             </li>
