--- a/templates/Registration/activation-required.html.twig
+++ b/templates/Registration/activation-required.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'REGISTRATION.ACTIVATION.TITLE'|trans }}{% endblock %}
+{% block title %}Letzswap | {{ 'REGISTRATION.ACTIVATION.TITLE'|trans }}{% endblock %}
 
 {% block body %}
     <p class="alert alert-success">{{ 'REGISTRATION.ACTIVATION.INFO'|trans }}</p>
