Fix form and templates

--- a/templates/Registration/register.html.twig
+++ b/templates/Registration/register.html.twig
@@ -5,5 +5,5 @@
 {% block body %}
     <h1>{{ 'REGISTRATION.TITLE'|trans }}</h1>
 
-    {{ form_end(registrationForm) }}
+    {{ form(registrationForm) }}
 {% endblock %}
