--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang={{ locale }}>
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
@@ -8,8 +9,8 @@
               crossorigin="anonymous">
     {% endblock %}
 </head>
-{% include 'Main/header.html.twig' %}
 <body>
+{% include 'Main/header.html.twig' %}
 {% block body %}
 {% endblock %}
 {% block javascripts %}
@@ -23,6 +24,6 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 {% endblock %}
-</body>
 {% include 'Main/footer.html.twig' %}
+</body>
 </html>
