--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -15,8 +15,8 @@
                 </a>
             </li>
         {% else %}
-            <li class="nav-item {% if app.request.attributes.get('_route') == 'app_login' %} active {% endif %}">
-                <a class="nav-link" href="{#{ path('app_login') }#}">
+            <li class="nav-item {% if app.request.attributes.get('_route') == 'login' %} active {% endif %}">
+                <a class="nav-link" href="{{ path('login') }}">
                     {{ 'NAV.LOGIN'|trans }}
                 </a>
             </li>
