Contact form not done

--- a/templates/About/about.html.twig
+++ b/templates/About/about.html.twig
@@ -1,6 +1,5 @@
 {% extends 'base.html.twig'%}
-
-<title>{% block title %}About Letzswap{% endblock %}</title>
+{% block title %}About Letzswap{% endblock %}
 
 {% block body %}
     <button href="#contact">Contact Us!</button>
@@ -21,4 +20,6 @@
     LetzSwap is a peer-to-peer platform, which facilitates fast swapping of goods in Luxembourg. Users can post photos and descriptions of their items in under one minute and they can easily scroll through available items they can swap with. If there is no item of interest for them, they can state what item they want in return and receive a notification when a match is available
 
     </p>
+
+
 {% endblock %}
