controller picture handling base

--- a/templates/Item/add-item.html.twig
+++ b/templates/Item/add-item.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Hello ItemController!{% endblock %}
 
 {% block body %}
-    <div class="example-wrapper">
-        <h1>Hello {{ controller_name }}! ✅</h1>
-    </div>
+
+    {{ form(addItemForm) }}
+
+
 {% endblock %}
