--- a/templates/Main/footer.html.twig
+++ b/templates/Main/footer.html.twig
@@ -5,8 +5,8 @@
     <!-- Copyright -->
 
     <ul>
-        <li class="nav-item {#% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %#}">
-            <a class="nav-link" href="{#{ path('terms_of_service') }#}">
+        <li class="nav-item {% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %}">
+            <a class="nav-link" href="{{ path('term_of_service') }}">
                 {{ 'NAV.TERMS'|trans }}
             </a>
         </li>
