--- a/templates/Registration/registration.html.twig
+++ b/templates/Registration/registration.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Letzswap | {{ 'REGISTRATION.TITLE'|trans }}{% endblock %}
+{% block title %}Letzswap | {{ 'REGISTRATION.TITLE'|trans({}, 'registration') }}{% endblock %}
 
 {% block body %}
     <h1>{{ 'REGISTRATION.TITLE'|trans }}</h1>
