--- a/templates/Main/header.html.twig
+++ b/templates/Main/header.html.twig
@@ -1,4 +1,4 @@
-<div class="container">
-    <img src="{{ asset('img/logo-placeholder.png') }}" alt="LëtzSwap! logo">
+<div>
+
     {% include 'Main/navbar.html.twig' %}
 </div>
