--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class=nav>
+<nav class="nav">
 
     <ul class="nav nav-pills nav-fill">
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
@@ -16,7 +16,7 @@
             </li>
         {% else %}
             <li class="nav-item {% if app.request.attributes.get('_route') == 'app_login' %} active {% endif %}">
-                <a class="nav-link" href="{{ path('login') }}">
+                <a class="nav-link" href="{#{ path('app_login') }#}">
                     {{ 'NAV.LOGIN'|trans }}
                 </a>
             </li>
