--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -32,6 +32,22 @@ body{
     margin: 0;
     padding: 0;
 }
+
 .navbar_element {
     margin-left: 10px;
+}
+
+.footer {
+    background-color: #f2f2f2;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    align-items: center;
+}
+
+.footer_elements {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
