--- a/templates/Main/footer.html.twig
+++ b/templates/Main/footer.html.twig
@@ -1,14 +1,17 @@
-<footer class="page-footer bg-light">
+<footer class="footer">
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center">© 2019 Copyright - LëtzSwap!</div>
-    <!-- Copyright -->
 
-    <ul>
-        <li class="nav-item {#% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %#}">
-            <a class="nav-link" href="{#{ path('terms_of_service') }#}">
+
+    <ul class="footer_elements">
+        <li class="footer_elements {#% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %#}">
+            <a class="footer_link" href="{#{ path('terms_of_service') }#}">
                 {{ 'NAV.TERMS'|trans }}
             </a>
+        </li>
+        <li class="footer_elements">
+            <!-- Copyright -->
+            © 2019 Copyright - LëtzSwap!
+            <!-- Copyright -->
         </li>
     </ul>
 
