--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -4,13 +4,13 @@
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
             <li class="navbar_element {% if app.request.attributes.get('_route') == 'add_item' %} active {% endif %}">
-                <a class="navbar_link" href="{{ path('add_item') }}">
+                <a class="navbar_link" href="{#{ path('add_item') }#}">
                     {{ 'NAV.ADD_ITEM'|trans }}
                 </a>
             </li>
 
             <li class="navbar_element">
-                <a class="navbar_link" href="{{ path('app_logout') }}">
+                <a class="navbar_link" href="{#{ path('app_logout') }#}">
                     {{ 'NAV.LOGOUT'|trans }}
                 </a>
             </li>
