--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -4,13 +4,13 @@
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
             <li class="navbar_element {% if app.request.attributes.get('_route') == 'add_item' %} active {% endif %}">
-                <a class="navbar_link" href="{#{ path('add_item') }#}">
+                <a class="navbar_link" href="{{ path('item_new') }}">
                     {{ 'NAV.ADD_ITEM'|trans }}
                 </a>
             </li>
 
             <li class="navbar_element">
-                <a class="navbar_link" href="{#{ path('app_logout') }#}">
+                <a class="navbar_link" href="{{ path('app_logout') }}">
                     {{ 'NAV.LOGOUT'|trans }}
                 </a>
             </li>
@@ -21,16 +21,15 @@
                 </a>
             </li>
             <li class="navbar_element {% if app.request.attributes.get('_route') == 'register' %} active {% endif %}">
-                <a class="navbar_link" href="{{ path('register')}}">
+                <a class="navbar_link" href="{{ path('register') }}">
                     {{ 'NAV.REGISTER'|trans }}
                 </a>
             </li>
             <li class="nav-item {% if app.request.attributes.get('_route') == 'about' %} active {% endif %}">
-                <a class="nav-link" href="{{ path('about')}}">
+                <a class="nav-link" href="{{ path('about') }}">
                     {{ 'NAV.ABOUT'|trans }}
                 </a>
             </li>
-
         {% endif %}
     </ul>
 </nav>
