--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,70 @@
-#terms {
-    margin: 2rem;
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    transition-duration: 0.3s;
 }
-#terms h1 {
-    text-align: center;
+
+body{
+    position: relative;
+    background-color: #7959db;
+    margin-top: 40px;
+    font-family: "Source Code Pro", sans-serif;
+}
+
+.navbar {
+    display: flex;
+    position: fixed;
+    top: 0;
+    background-color: #f2f2f2;
+    width: 100%;
+    height: 40px;
+    justify-content: flex-end;
+}
+
+.navbar_list {
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    background-color: #f2f2f2;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.navbar_element {
+    margin-left: 10px;
+    background-color: #fd680b;
+    border-radius: 12px;
+    padding: 2px 12px;
+    color: white;}
+
+.navbar_link_local {
+        color: white;
+    }
+
+#elevator_pitch {
+    border: 1px solid black;
+    margin: 3rem 10rem 1rem 33rem;
+    width: 40%;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px 3px ;
+    }
+
+.btn.btn-primary {
+    margin-left: 5rem;
+    border-radius: 100%;
+}
+.btn.btn-danger {
+    border-radius: 100%;
+}
+#butons {
+    display: flex;
+}
+
+.card {
+    padding: 1rem;
+    border-radius: 20%;
 }
