some extra fixes regarding blocks

--- a/templates/About/about.html.twig
+++ b/templates/About/about.html.twig
@@ -27,10 +27,9 @@
         </p>
     </article>
 
-{% include 'flash_messages.html.twig' %}
+{% include 'flash_message.html.twig' %}
 
-{% include 'About/contact.html.twig' %}
+{% include 'about/contact.html.twig' %}
 
-
-
+{% endblock %}
 
