--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -25,9 +25,18 @@ pre-owned items or to exchange unwanted goods.</p>
                 </div>
             </div>
         </div>
+    </div>
         <div class="col">
-            One of three columns
-        </div>
+            <div class="card" style="width: 17rem;">
+                <img src="https://picsum.photos/200/300" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <div id="butons">
+                        <a href="#" class="btn btn-danger"><i class="far fa-flag"></i><br>Report</a>
+                        <a href="#" class="btn btn-primary"><i class="fas fa-sync"></i><br>Swap</a>
+                    </div>
+                </div>
+            </div>        </div>
         <div class="col">
             One of three columns
         </div>
