--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -4,7 +4,7 @@
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
 
             <li class="navbar_element {% if app.request.attributes.get('_route') == 'add_item' %} active {% endif %}">
-                <a class="navbar_link_local" href="{{ path('add_item') }}">
+                <a class="navbar_link_local" href="{{ path('item_new') }}">
                     {{ 'NAV.ADD_ITEM'|trans }}
                 </a>
             </li>
@@ -12,6 +12,11 @@
             <li class="navbar_element">
                 <a class="navbar_link_local" href="{{ path('app_logout') }}">
                     {{ 'NAV.LOGOUT'|trans }}
+                </a>
+            </li>
+            <li class="nav-item {% if app.request.attributes.get('_route') == 'about' %} active {% endif %}">
+                <a class="nav-link" href="{{ path('about')}}">
+                    {{ 'NAV.ABOUT'|trans }}
                 </a>
             </li>
         {% else %}
