--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -17,10 +17,11 @@ pre-owned items or to exchange unwanted goods.</p>
             <div class="card" style="width: 17rem;">
                 <img src="https://picsum.photos/200/300" alt="...">
                 <div class="card-body">
+                    <div class="card_category_free">Free</div>
                     <h5 class="card-title">Card title</h5>
                     <div id="butons">
-                        <a href="#" class="btn btn-danger"><i class="far fa-flag"></i><br>Report</a>
-                        <a href="#" class="btn btn-primary"><i class="fas fa-sync"></i><br>Swap</a>
+                        <a href="#" class="btn btn-danger"><i class="far fa-flag"></i></a>
+                        <a href="#" class="btn btn-primary"><i class="fas fa-asterisk"></i></a>
                 </div>
                 </div>
             </div>
@@ -28,17 +29,29 @@ pre-owned items or to exchange unwanted goods.</p>
     </div>
         <div class="col">
             <div class="card" style="width: 17rem;">
-                <img src="https://picsum.photos/200/300" alt="...">
+                <img src="https://picsum.photos/200/300/?random" alt="...">
                 <div class="card-body">
+                    <div class="card_category_swap">Swap</div>
                     <h5 class="card-title">Card title</h5>
                     <div id="butons">
-                        <a href="#" class="btn btn-danger"><i class="far fa-flag"></i><br>Report</a>
-                        <a href="#" class="btn btn-primary"><i class="fas fa-sync"></i><br>Swap</a>
+                        <a href="#" class="btn btn-danger"><i class="far fa-flag"></i></a>
+                        <a href="#" class="btn btn-primary"><i class="fas fa-asterisk"></i></a>
                     </div>
                 </div>
-            </div>        </div>
+            </div>
+        </div>
         <div class="col">
-            One of three columns
+            <div class="card" style="width: 17rem;">
+                <img src="https://picsum.photos/200/300/?random" alt="...">
+                <div class="card-body">
+                    <div class="card_category_swap">Swap</div>
+                    <h5 class="card-title">Card title</h5>
+                    <div id="butons">
+                        <a href="#" class="btn btn-danger"><i class="far fa-flag"></i></a>
+                        <a href="#" class="btn btn-primary"><i class="fas fa-asterisk"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row align-items-center">
@@ -65,5 +78,6 @@ pre-owned items or to exchange unwanted goods.</p>
         </div>
     </div>
 </div>
+
 </main>
 {% endblock %}
