--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,40 +15,55 @@
 
 body{
     position: relative;
-    background-color: #7959db;
+    background-color: white;
     margin-top: 40px;
-    font-family: "Source Code Pro", sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .navbar {
+    top: 0;
+    width: 100%;
+    height: 50px;
+    justify-content: flex-end;
     display: flex;
     position: fixed;
-    top: 0;
     background-color: #f2f2f2;
-    width: 100%;
-    height: 40px;
-    justify-content: flex-end;
+    box-shadow: -2px 10px 30px -12px rgba(0,0,0,0.75);
 }
 
 .navbar_list {
     top: 0;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: row;
     background-color: #f2f2f2;
+    color: #336655;
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
 .navbar_element {
+    padding: 2px 18px;
     margin-left: 10px;
-    background-color: #fd680b;
-    border-radius: 12px;
-    padding: 2px 12px;
-    color: white;}
-
-.navbar_link_local {
-        color: white;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    border:1px solid #336655;
+    font-size: 16px;
     }
+.navbar_element:hover {
+    background-color: #c9f0e3;
+}
+
+.navbar_link {
+    color: #336655;
+    text-decoration: none;
+    font-weight: 400;
+    }
+
+.navbar_link:hover {
+    text-decoration: none;
+    background-color: #c9f0e3;
+    color:#336655;
+}
 
 #elevator_pitch {
     border: 1px solid black;
