Pagination waiting for Item controller

--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -76,8 +76,12 @@ pre-owned items or to exchange unwanted goods.</p>
             One of three columns
             </div>
         </div>
+    <!--   <div class="count my-4">
+     {#{ items.getTotalItemCount() }#}
     </div>
-</div>
-
+    <div class="navigation">
+        {#}{ knp_pagination_render(items) }#}
+    </div>
+ -->
 </main>
 {% endblock %}
