add items to homepage and filip css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,73 +73,32 @@ body{
     box-shadow: 1px 1px 1px 1px #336655 ;
     }
 /* 2 buttons report and see more, flex applied so they appear next to each other */
-#butons {
-    display: flex;
-}
-/* The...card*/
-.card {
-    padding: 1rem;
-    border-radius: 5%;
-    box-shadow: 2px 2px 2px 2px #336655;
-    border: 2px solid #336655;
-    background-color: #ffffff;
-}
-.card img {
-    box-shadow: 2px 2px 3px 1px;
-    border-radius: 3%;
-}
 
-.card_category_free {
-    position: absolute;
-    bottom: 88.5%;
-    left: 77%;
-    background-color: #336655;
-    color: white;
-    font-weight: bold;
-    border: 1px solid rgba(0, 0, 0, 0.31);
-    padding: 0.3rem;
-    border-radius: 7%;
-}
-.card_category_swap {
-    position: absolute;
-    bottom: 88.5%;
-    left: 75%;
-    background-color: #336655;
-    color: white;
-    font-weight: bold;
-    border: 1px solid rgba(0, 0, 0, 0.31);
-    padding: 0.3rem;
-    border-radius: 7%;
-
-}
 /* Container for the cards, so they appear next to each other*/
 .container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
 }
-.card-title {
-    text-align: center;
-    font-size: 2rem;
-    text-transform: uppercase;
-    font-weight: bold;
+.card {
+    width: 300px;
+    height: 450px;
+    background-color: white;
+    margin: 2rem;
+    overflow: hidden;
+    border-radius: 0.5rem;
+    -webkit-box-shadow: 0 0 100px 40px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 6px 0px rgba(166,166,166,1);
+    /* card:hover*/
 }
 
-/* Red button with flag to report the item*/
-.btn.btn-danger
- {
-    border-radius: 100%;
-    -webkit-box-shadow: -2px 6px 21px -10px rgba(0,0,0,1);
-    -moz-box-shadow: -2px 6px 21px -10px rgba(0,0,0,1);
-    box-shadow: -2px 6px 21px -10px rgba(0,0,0,1);
-}
 
-/* Blue button with asterik to see the details of the item*/
-.btn.btn-primary
-{
-    margin-left: 7rem;
-    border-radius: 100%;
-    -webkit-box-shadow: -2px 6px 21px -10px rgba(0,0,0,1);
-    -moz-box-shadow: -2px 6px 21px -10px rgba(0,0,0,1);
-    box-shadow: -2px 6px 21px -10px rgba(0,0,0,1);
+.card:hover {
+    -webkit-box-shadow: 0 0 100px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 100px 10px rgba(0, 0, 0, 0.2);
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
 }
 
 
