--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -12,7 +12,7 @@ pre-owned items or to exchange unwanted goods.</p>
 </article>
 
 <div class="container">
-    <div class="row align-items-start">
+    <div class="d-flex justify-content-center">
         <div class="col">
             <div class="card" style="width: 17rem;">
                 <img src="https://picsum.photos/200/300" alt="...">
@@ -20,39 +20,64 @@ pre-owned items or to exchange unwanted goods.</p>
                     <div class="card_category_free">Free</div>
                     <h5 class="card-title">Card title</h5>
                     <div id="butons">
-                        <a href="#" class="btn btn-danger"><i class="far fa-flag"></i></a>
-                        <a href="#" class="btn btn-primary"><i class="fas fa-asterisk"></i></a>
+                        <a href="#" class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
+                        <a href="#" class="btn btn-info"><i class="fas fa-info"></i></a>
                 </div>
+                </div>
+            </div>
+        </div>
+    <div class="col">
+        <div class="card" style="width: 17rem;">
+            <img src="https://picsum.photos/200/300" alt="...">
+            <div class="card-body">
+                <div class="card_category_free">Free</div>
+                <h5 class="card-title">Card title</h5>
+                <div id="butons">
+                    <a href="#" class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
+                    <a href="#" class="btn btn-info"><i class="fas fa-info"></i></a>
                 </div>
             </div>
         </div>
     </div>
-        <div class="col">
-            <div class="card" style="width: 17rem;">
-                <img src="https://picsum.photos/200/300/?random" alt="...">
-                <div class="card-body">
-                    <div class="card_category_swap">Swap</div>
-                    <h5 class="card-title">Card title</h5>
-                    <div id="butons">
-                        <a href="#" class="btn btn-danger"><i class="far fa-flag"></i></a>
-                        <a href="#" class="btn btn-primary"><i class="fas fa-asterisk"></i></a>
-                    </div>
+    <div class="col">
+        <div class="card" style="width: 17rem;">
+            <img src="https://picsum.photos/200/300" alt="...">
+            <div class="card-body">
+                <div class="card_category_free">Free</div>
+                <h5 class="card-title">Card title</h5>
+                <div id="butons">
+                    <a href="#" class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
+                    <a href="#" class="btn btn-info"><i class="fas fa-info"></i></a>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="card" style="width: 17rem;">
-                <img src="https://picsum.photos/200/300/?random" alt="...">
-                <div class="card-body">
-                    <div class="card_category_swap">Swap</div>
-                    <h5 class="card-title">Card title</h5>
-                    <div id="butons">
-                        <a href="#" class="btn btn-danger"><i class="far fa-flag"></i></a>
-                        <a href="#" class="btn btn-primary"><i class="fas fa-asterisk"></i></a>
-                    </div>
+    </div>
+    <div class="col">
+        <div class="card" style="width: 17rem;">
+            <img src="https://picsum.photos/200/300" alt="...">
+            <div class="card-body">
+                <div class="card_category_free">Free</div>
+                <h5 class="card-title">Card title</h5>
+                <div id="butons">
+                    <a href="#" class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
+                    <a href="#" class="btn btn-info"><i class="fas fa-info"></i></a>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="col">
+        <div class="card" style="width: 17rem;">
+            <img src="https://picsum.photos/200/300" alt="...">
+            <div class="card-body">
+                <div class="card_category_free">Free</div>
+                <h5 class="card-title">Card title</h5>
+                <div id="butons">
+                    <a href="#" class="btn btn-danger"><i class="fab fa-font-awesome-flag"></i></a>
+                    <a href="#" class="btn btn-info"><i class="fas fa-info"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
     <div class="row align-items-center">
         <div class="col">
@@ -76,12 +101,9 @@ pre-owned items or to exchange unwanted goods.</p>
             One of three columns
             </div>
         </div>
-    <!--   <div class="count my-4">
-     {#{ items.getTotalItemCount() }#}
     </div>
-    <div class="navigation">
-        {#}{ knp_pagination_render(items) }#}
     </div>
- -->
+</div>
+
 </main>
 {% endblock %}
