--- a/public/css/404.css
+++ b/public/css/404.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Source Code Pro', sans-serif;
     color: #fff;
     text-align: center;
     padding: 2em 0 0;
