--- a/templates/About/about.html.twig
+++ b/templates/About/about.html.twig
@@ -27,7 +27,7 @@
         </p>
     </article>
 
-{% include 'Contact/contact.html.twig' %}
-
+{#{% include 'Contact/contact.html.twig' %}#}
+    {{ form(contactForm) }}
 {% endblock %}
 
