--- a/templates/Contact/contact-mail.html.twig
+++ b/templates/Contact/contact-mail.html.twig
@@ -5,18 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ 'REGISTRATION.MAIL.TITLE'|trans }}</title>
+    <title>Contact Mail from {{ data.name }}</title>
 </head>
 <body>
-<h1>{{ 'REGISTRATION.MAIL.TITLE'|trans }}</h1>
+<h1>Message from {{ data.name }}</h1>
 
-<p>{{ 'REGISTRATION.MAIL.TEXT'|trans({'%name%': user.getUsername()}) }}</p>
+<p>Someone named {{ data.name }}</p>
+<p>Whose email is {{ data.email }}</p>
+<p>Sent a message with subject {{ data.subject }}</p>
+<p>With content" "{{ data.message }}"</p>
 
-<p>
-    {{ 'REGISTRATION.MAIL.HTML.PLEASE_CLICK'|trans }}
-    <a href="{{ url('account_activation_token', {'token': user.getActivationToken()}) }}">
-        {{ 'REGISTRATION.MAIL.HTML.LINK'|trans }}
-    </a>
-</p>
+
 </body>
 </html>
