--- a/templates/Contact/contact-mail.txt.twig
+++ b/templates/Contact/contact-mail.txt.twig
@@ -1,5 +1,5 @@
-{{ 'REGISTRATION.MAIL.TITLE'|trans }}
+Contact Mail from {{ data.name }}
 
-{{ 'REGISTRATION.MAIL.TEXT'|trans({'%name%': user.getUsername()}) }}
+Someone named {{ data.name }}, whose email is {{ data.email }}, sent a message with subject {{ data.subject }} and the content bellow
 
-{{ 'REGISTRATION.MAIL.TXT.COPY_LINK'|trans }} {{ url('account_activation_token', {'token': user.getActivationToken()}) }}
+{{ data.message }}
