Needs to be fixed,item_controller blocking

--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -13,10 +13,10 @@
 
         <div class="container">
             <div class="d-flex justify-content-center">
+                <div class="col">
                 {% for item in items %}
                     {% for picture in pictures %}
                         {% if picture.item.id  == item.getId() %}
-                            <div class="col">
                                 <div class="card" style="width: 17rem;">
                                     {#  TODO: Remove the width of the image, use CSS - Adolfo #}
                                     <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
@@ -60,6 +60,11 @@
                 </div>
             </div>
         </div>
-
+        <div class="count my-4">
+            {#{ items.getTotalItemCount() }#}
+        </div>
+        <div class="navigation">
+            {#}{ knp_pagination_render(items) }#}
+        </div>
     </main>
 {% endblock %}
