Update with basic text

--- a/templates/Swap/swap-mail.html.twig
+++ b/templates/Swap/swap-mail.html.twig
@@ -5,18 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ 'REGISTRATION.MAIL.TITLE'|trans }}</title>
+    <title>{{ 'SWAP.MAIL.TITLE'|trans({'%item%': item.getTitle(), '%name%': user.getUsername()}) }}</title>
 </head>
 <body>
-<h1>{{ 'REGISTRATION.MAIL.TITLE'|trans }}</h1>
+<h1>{{ 'SWAP.MAIL.TITLE'|trans({'%item%': item.getTitle(), '%name%': user.getUsername()}) }}</h1>
 
-<p>{{ 'REGISTRATION.MAIL.TEXT'|trans({'%name%': user.getUsername()}) }}</p>
+{# FIXME: Content needed#}
+<p>We need content here! User and Item properties are available to use on the text as in titles above.
+    The trans() function passes parameters gotten from User and Item entities to be inserted inside
+    the text in messages.[twol etter code here].yaml</p>
 
-<p>
-    {{ 'REGISTRATION.MAIL.HTML.PLEASE_CLICK'|trans }}
-    <a href="{{ url('account_activation_token', {'token': user.getActivationToken()}) }}">
-        {{ 'REGISTRATION.MAIL.HTML.LINK'|trans }}
-    </a>
-</p>
+
 </body>
 </html>
