--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,11 +16,12 @@
 body{
     position: relative;
     background-color: white;
-    margin-top: 40px;
+    margin-top: 80px;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 .navbar {
+    z-index: 9999;
     top: 0;
     width: 100%;
     height: 50px;
@@ -51,6 +52,7 @@ body{
     }
 .navbar_element:hover {
     background-color: #c9f0e3;
+    border:1px solid #c9f0e3;
 }
 
 .navbar_link {
@@ -75,7 +77,7 @@ body{
 /* 2 buttons report and see more, flex applied so they appear next to each other */
 
 /* Container for the cards, so they appear next to each other*/
-.container {
+.container-fluid {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -83,9 +85,9 @@ body{
 }
 .card {
     width: 300px;
-    height: 450px;
+    height: 350px;
     background-color: white;
-    margin: 2rem;
+    margin: 1rem;
     overflow: hidden;
     border-radius: 0.5rem;
     -webkit-box-shadow: 0 0 100px 40px rgba(0, 0, 0, 0.2);
@@ -100,6 +102,12 @@ body{
     -webkit-transform: translateY(-20px);
     transform: translateY(-20px);
 }
+
+.card-img-top {
+
+}
+
+
 
 
 
