--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,9 @@
 <html lang={{ locale }}>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -40,3 +43,4 @@
 {% include 'Main/footer.html.twig' %}
 {% endblock %}
 </html>
+
