--- a/templates/Main/footer.html.twig
+++ b/templates/Main/footer.html.twig
@@ -3,12 +3,12 @@
 
 
     <ul class="footer_elements">
-        <li class="footer_elements {% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %}">
+        <li {% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %}>
             <a class="footer_link" href="{{ path('term_of_service') }}">
                 {{ 'NAV.TERMS'|trans }}
             </a>
         </li>
-        <li class="footer_elements">
+        <li>
             <!-- Copyright -->
             © 2019 Copyright - LëtzSwap!
             <!-- Copyright -->
