--- a/templates/Registration/registration.html.twig
+++ b/templates/Registration/registration.html.twig
@@ -3,7 +3,12 @@
 {% block title %}Letzswap | {{ 'REGISTRATION.TITLE'|trans({}, 'registration') }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'REGISTRATION.TITLE'|trans }}</h1>
-
-    {{ form(registrationForm) }}
+    <div class="registration_page">
+        <div>
+            <h1 id="registration_title">{{ 'REGISTRATION.TITLE'|trans }}</h1>
+        </div>
+        <form class="registration_form_container">
+        {{ form(registrationForm) }}
+        </form>
+    </div>
 {% endblock %}
