--- a/templates/Report/report-mail.txt.twig
+++ b/templates/Report/report-mail.txt.twig
@@ -1,4 +1,5 @@
-{{ 'REPORT.MAIL.TITLE'|trans({'%item%': item.getTitle()}) }} {{ user.getUsername()|default('someone') }}!
+{# FIXME: We need to pass the item from ReportController, disabling the default item #}
+{{ 'REPORT.MAIL.TITLE'|trans({'%item%': item.getTitle()|default('Something')}) }} {{ user.getUsername()|default('someone') }}!
 
 {# FIXME: We need content using the entities Item and User properties as above
  if the report didn't come from loged in User, user is null and |default() will be rendered instead #}
