login form size is fixed and centered

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,9 +117,8 @@ body{
     flex-direction: column;
     justify-content: center;
     max-width: 950px;
-   
-
 }
+
 #registration_title {
     text-align: center;
 }
@@ -129,5 +128,12 @@ body{
 
 }
 
+.login_page {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 350px;
+}
 
 
