txt changes/add

--- a/templates/Registration/registration-mail.txt.twig
+++ b/templates/Registration/registration-mail.txt.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain 'registration' %}
+
 {{ 'REGISTRATION.MAIL.TITLE'|trans }}
 
 {{ 'REGISTRATION.MAIL.TEXT'|trans({'%name%': user.getUsername()}) }}
