--- a/templates/Main/footer.html.twig
+++ b/templates/Main/footer.html.twig
@@ -1,7 +1,5 @@
 <footer class="footer">
 
-
-
     <ul class="footer_elements">
         <li class="footer_elements {% if app.request.attributes.get('_route') == 'term_of_service' %} active {% endif %}">
             <a class="footer_link" href="{{ path('term_of_service') }}">
@@ -10,7 +8,7 @@
         </li>
         <li class="footer_elements">
             <!-- Copyright -->
-            © 2019 Copyright - LëtzSwap!
+            {{ 'APP.TITLE' | trans }} &copy; 2019 Copyright
             <!-- Copyright -->
         </li>
     </ul>
