--- a/templates/Registration/registration.html.twig
+++ b/templates/Registration/registration.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% trans_default_domain 'registration' %}
 
 {% block title %}Letzswap | {{ 'REGISTRATION.TITLE'|trans({}, 'registration') }}{% endblock %}
 
